# aster

./: CMakeLists.txt  README_devs.md
contrib/cpu/python/aster_cpu/execution/: helpers.py
contrib/kittens/test/: test_102_gemm_python_multitile.py  test_gemm_16x16xK_lds_3buf.mlir  test_gemm_2wave.mlir  test_gemm_2wave_lds.mlir  test_gemm_4wave.mlir  test_lib.py
include/aster/IR/: ConstValue.h  Inst.td  Operand.h
include/aster/Interfaces/: CMakeLists.txt  LoadOpInterface.h  LoadOpInterface.td  StoreOpInterface.h  StoreOpInterface.td  TargetAttr.h  TargetAttr.td
include/aster/Support/: EnumUtils.h
lib/Analysis/: MemoryDependenceAnalysis.cpp
lib/Dialect/AMDGCN/Analysis/: RegisterInterferenceGraph.cpp  RegisterLiveness.cpp  Utils.cpp
lib/Dialect/AMDGCN/IR/: AMDGCN.cpp  AMDGCNVerifiers.cpp  Hazards.cpp  SchedAttrs.cpp
lib/Dialect/AMDGCN/Transforms/: AMDGCNBufferization.cpp  CMakeLists.txt  Pipelines.cpp  RegisterColoring.cpp  ToRegisterSemantics.cpp  WaitInsertion.cpp
lib/Interfaces/: CMakeLists.txt  LoadOpInterface.cpp  StoreOpInterface.cpp
llvm/: LLVM_COMMIT
python/aster/compiler/: metadata.py
test/Dialect/AMDGCN/: ops.mlir
test/Dialect/AMDGCN/Transforms/: bufferization.mlir  phi-equiv-coalescing.mlir  register-coloring.mlir
test/lib/Pass/: CMakeLists.txt  Passes.td
tools/: CMakeLists.txt  setup.sh
tools/amdgcn-tblgen/: CMakeLists.txt  InstAsmFormat.cpp  InstAsmPrinterGen.cpp  InstCommon.cpp  InstCommon.h  InstMethodsGen.cpp
tools/aster-tblgen/: CMakeLists.txt  Generators.cpp  OpGen.cpp  OpGen.h  main.cpp
(+14 files in other folders)
